Fixed spacing between feaures and main sections

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ nav>a:hover {
 	width: 50%;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 40px;
 	text-align: center;
 
 }
